/**
 * 共同数据结构定义
 */

syntax = "proto3";

package GRPCCommon.protobuf.common;

// UIA库
enum FlaUIType{
	UIA2=0;
	UIA3=1;
}

// 鼠标位置信息
message Position{
	int32 x=1;
	int32 y=2;
}

// 高亮参数
message Highlight{
	// 高亮的颜色 #FF0000为红色
	string color =1;

	// 高亮的时常，单位毫秒
	int32 duration=2;
}

// 错误消息
message Error{
	string message=1;
}

// 元素类型
enum ElementType{
	// 未知
	unknow=0;

	// 窗口元素
	form=1;

	// html元素
	html=2;
}

// 元素的属性
message Attribute{
	
	// 元素类别
	ElementType elementType=1;

	// 元素缓存的id
	optional string cacheId=2;

	// 属性列表
	map<string, string> values=3;

	// 元素的位置
	optional BoundingRectangle boundingRectangle=4;

	// 父级属性列表
	optional Attribute parent=5;

	// 子级别属性列表
	repeated Attribute children=6;
}

// 边框范围
message BoundingRectangle{
	int32 x=1;
	int32 y=2;
	int32 width=3;
	int32 height=4;
}

// 请求的统一格式
message Request{
	string id=1; // guid格式的id

	string command = 2; // 命令

	// UIA模式
	common.FlaUIType automationType=3;

	int32 millisecondsTimeout  = 4; // 本条命令的执行超时时间（单位：毫秒）

	// 实际执行命令参数
	// 鼠标位置
	optional common.Position position=10;

	// 高亮的参数
	optional common.Highlight highlight=11;

	// 属性列表
	optional common.Attribute attribute=12;

	// 错误消息
	optional common.Error error=999;
}

// 返回值的统一格式
message Response{
	// guid格式的id
	string id=1;

	// 执行是否成功
	bool success =2;

	 // 命令
	string command = 3;

	// 属性列表
	optional common.Attribute attribute=4;

	// 错误消息
	optional common.Error error=999;
}